--- a/create-react-app/src/components/messageScreen.scss
+++ b/create-react-app/src/components/messageScreen.scss
@@ -1,5 +1,5 @@
 .messageScreen {
-    height: 100%;
+    height: 100vh;
     header {
         position: fixed;
         width: 100%;
@@ -23,16 +23,32 @@
             letter-spacing: .056em;
         }
     }
-    input {
-        // position: absolute;
+    form {
+        // display: none;
+        position: fixed;
+        height: 10em;
+        width: 100%;
+        bottom: 0px;
+
+        input {
+            width: 100%;
+            height: 100%;
+        }
     }
 }
 
 .messageBox {
-    // position: relative;
-    background-color: red;
-    height: 75%;
+    height: 100%;
     width: 100vw;
     max-width: 100%;
     overflow: scroll;
+
+    ul {
+        width: 100%;
+        height: 100%;
+
+        li {
+            font-size: 3em;
+        }
+    }
 }
