--- a/create-react-app/src/components/messagePreview.scss
+++ b/create-react-app/src/components/messagePreview.scss
@@ -38,5 +38,14 @@
         box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, 
         inset #304701 0 -1px 9px, #89FF00 0 2px 12px;
     }
+    .offline {
+        width: 2.4em;
+        height: 2.4em;
+        border-radius: 50%;
+        background-color: #F00;
+        border-radius: 50%;
+        box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, 
+        inset #441313 0 -1px 9px, rgba(255, 0, 0, 0.5) 0 2px 12px;
+    }
 }
 
