--- a/create-react-app/src/components/messageScreen.scss
+++ b/create-react-app/src/components/messageScreen.scss
@@ -3,7 +3,7 @@
     header {
         position: fixed;
         width: 100%;
-        height: 7em;
+        height: 10%;
         background-color: #388edf;
         display: flex;
         align-items: center;
@@ -38,7 +38,7 @@
 }
 
 .messageBox {
-    height: 100%;
+    height: 80%;
     width: 100vw;
     max-width: 100%;
     overflow: scroll;
@@ -49,7 +49,38 @@
 
         li {
             font-size: 3em;
-            
+            line-height: 1.25em;
         }
     }
+
+
+    .messageOuter {
+        width: 100%;
+        display: flex;
+    }
+
+    .userMessageOuter {
+        justify-content: flex-end;
+    }
+
+    .message {
+        border-radius: 1em;
+        max-width: 80%;
+        word-wrap: break-word;
+    }
+
+    .userMessage {
+        background-color: #388EDF;
+        margin-right: 1em;
+        border-top-right-radius: 0px;
+        padding-left: 1em;
+    }
+
+
+    .friendMessage {
+        background-color: lightgrey;
+        margin-left: 1em;
+    }
+//     main color #388EDF
+// THE GREY #E7E6EB
 }
