--- a/create-react-app/src/components/messageScreen.scss
+++ b/create-react-app/src/components/messageScreen.scss
@@ -48,7 +48,7 @@
         height: 100%;
 
         li {
-            font-size: 3em;
+            font-size: 1.6em;
             line-height: 1.25em;
         }
     }
@@ -64,16 +64,16 @@
     }
 
     .message {
-        border-radius: 1em;
+        border-radius: 3em;
         max-width: 80%;
         word-wrap: break-word;
+        padding: .25em 1em;
+        margin-top: .15em;
     }
 
     .userMessage {
         background-color: #388EDF;
         margin-right: 1em;
-        border-top-right-radius: 0px;
-        padding-left: 1em;
     }
 
 
