--- a/create-react-app/src/components/messageScreen.scss
+++ b/create-react-app/src/components/messageScreen.scss
@@ -44,8 +44,8 @@
     overflow: scroll;
 
     ul {
+    margin-top: 20%;
         width: 100%;
-        height: 100%;
 
         li {
             font-size: 1.6em;
