--- a/create-react-app/src/components/messagesHome.scss
+++ b/create-react-app/src/components/messagesHome.scss
@@ -22,4 +22,23 @@ main {
     a {
         all: unset;
     }
+
+    .hide {
+        display: none;
+    }
+
+    .displayAddFriend {
+        display: inherit;
+
+        form {
+            width: 80vw;
+            margin: 0 auto;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            
+        }
+    }
+
+
 }
