working on http requests to users db

--- a/front-end/src/components/Login/Login.scss
+++ b/front-end/src/components/Login/Login.scss
@@ -1,4 +1,13 @@
 .login-page {
   height: 100vh;
   background: $background-login;
+
+  button {
+    background: none;
+    border: 1px solid $buttonBorderColor;
+  }
+
+  .activeTab {
+    background: $activeTabColor;
+  }
 }
