--- a/front-end/src/styles/colors.scss
+++ b/front-end/src/styles/colors.scss
@@ -10,3 +10,7 @@ $background-login: linear-gradient(
     rgba(56, 142, 223, 0.5) 99.98%,
     rgba(56, 142, 223, 0) 99.99%
   );
+
+// used on login/register
+$buttonBorderColor: red;
+$activeTabColor: green;
