--- a/front-end/src/components/Login/Login.scss
+++ b/front-end/src/components/Login/Login.scss
@@ -1,10 +1,40 @@
 .login-page {
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   background: $background-login;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h2 {
+    font-weight: bold;
+  }
+
+  .tab-selector {
+    display: flex;
+    margin-bottom: 2%;
+    button {
+      height: 1rem;
+      width: 4rem;
+      margin: 2%;
+    }
+  }
+
+  form {
+    // border: 1px dashed blue;
+    margin-top: 2.5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    input {
+      margin-top: 2.5%;
+    }
+  }
 
   button {
-    background: none;
-    border: 1px solid $buttonBorderColor;
+    background: $loginBackgroundColor;
+    // border: none;
   }
 
   .activeTab {
