--- a/front-end/src/components/HomeScreen/HomeScreen.scss
+++ b/front-end/src/components/HomeScreen/HomeScreen.scss
@@ -11,13 +11,19 @@
 
 .top-nav {
   display: flex;
-  width: 90%;
+  width: 100%;
   max-width: 100vw;
-  justify-content: space-between;
-  margin-left: 5%;
-  margin-right: 5%;
-
+  background: red;
+  justify-content: space-evenly;
   button {
     border: none;
+    background: none;
+    &:hover {
+      color: blue;
+    }
+  }
+
+  .none {
+    display: none;
   }
 }
