--- a/front-end/src/styles/components.scss
+++ b/front-end/src/styles/components.scss
@@ -1,2 +1,6 @@
 @import "../components/Login/Login.scss";
 @import "../components/HomeScreen/HomeScreen.scss";
+@import "../components/ContactList/ContactList.scss";
+@import "../components/Chat/Chat.scss";
+@import "../components/Settings/Settings.scss";
+@import "../components/AddFriend/AddContact.scss";
