--- a/front-end/src/components/HomeScreen/HomeScreen.scss
+++ b/front-end/src/components/HomeScreen/HomeScreen.scss
@@ -11,15 +11,23 @@
 
 .top-nav {
   display: flex;
+  align-items: center;
   width: 100%;
+  padding: 3% 0;
+  background: $topNav;
   max-width: 100vw;
-  background: red;
+  font-size: 1.2rem;
+  height: 15vh;
   justify-content: space-evenly;
   button {
     border: none;
     background: none;
+    color: grey;
+    outline: none;
     &:hover {
-      color: blue;
+      cursor: pointer;
+      color: white;
+      text-shadow: 1px 1px 3px black;
     }
   }
 
