--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -2,5 +2,6 @@
 
 @import "./styles/reset.scss";
 @import "./styles/colors.scss";
+@import "./styles/mixins.scss";
 @import "./styles/layout.scss";
 @import "./styles/components.scss";
