--- a/front-end/src/styles/colors.scss
+++ b/front-end/src/styles/colors.scss
@@ -3,3 +3,8 @@ $background-login: radial-gradient(circle, #5a7977 10%, #5e5c5c 95%);
 // used on login/register
 $loginBackgroundColor: grey;
 $activeTabColor: lightgreen;
+
+$topNav: #2e2e2e;
+
+$contactListOdd: #5a7977;
+$contactListEven: #5e5c5c;
