--- a/front-end/src/styles/layout.scss
+++ b/front-end/src/styles/layout.scss
@@ -11,6 +11,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   min-height: 100vh;
+  font-size: 62.5%;
+  color: white;
 }
 
 *,
