--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -1,6 +1,3 @@
-// @import-normalize;
-
-// @import "./styles/reset.scss";
-@import "./styles/colors.scss";
-@import "./styles/layout.scss";
-@import "./styles/components.scss";
+test {
+    color: red
+}
